  26-Jun-2021  - V0.37 Serialize DrugBank cofactors in pickle - resolve missing target names -
  26-Jun-2021  - V0.38 Make chemical component and BIRD definitions singular.
  27-Jun-2021  - V0.39 Add diagnostics to capture statistics for ChEMBL and Pharos mapped an unmapped cofactors
  27-Jun-2021  - V0.40 Refactor FASTA comment parsing strategy and make fewer assumptions about comment content
  27-Jun-2021  - V0.41 Add annotation of neighbor interactions to cofactor activity selections
  30-Jun-2021  - V0.42 Add reload() public methods to feature and cofactor provider modules
   1-Jul-2021  - V0.43 Adjustment linting rules to preserve unreferenced internal methods
   2-Jul-2021  - V0.44 Add the remaining subset of the antibody data from SAbDab and add taxonomy filtering for CARD features
   2-Jul-2021  - V0.45 Handle to testing case lacking taxonomy in CARDTargetFeatureProvider()
   7-Jul-2021  - V0.46 Add IMGTTargetProvider() and IMGTTargetFeatureProvider() modules and associated tests
  11-Jul-2021  - V0.47 Add support for "alignedRegions" in sequence alignment result files
  12-Jul-2021  - V0.48 Export aligned regions as lists of dictionaries in JSON
  12-Jul-2021  - V0.49 Adjust diagnostics for long running activity workflow
  12-Jul-2021  - V0.50 Add public reload method for ChEMBLTargetActivityProvider()
  12-Jul-2021  - V0.51 Make return status True in ChEMBLTargetActivityProvider.fetchTargetActivityData if the filtered target list is empty
  13-Jul-2021  - V0.52 Make all getFeatures() return an empty list rather than None, plus other small json export adjustments
  13-Jul-2021  - V0.53 Various unifying API method adjustments in cofactor and features providers
  14-Jul-2021  - V0.54 Adjustments for more descriptive IMGT attribute names
  14-Jul-2021  - V0.55 Standardize provider APIs extend functionality of PharosTargetActivityProvider
  28-Jul-2021  - V0.56 Update constructor API for TaxonomyProvider and update dependencies